# mal

./: .gitignore
c-jit-x64/: CMakeLists.txt  io.c  io.h  linux-abi.h  start.asm  start.c  stdlib.h  step0_repl.c  syscall.asm  syscall.h
c-jit-x64/bootstrap/: CMakeLists.txt  boot-startup.asm  boot-startup.c  boot-startup.h  startup.asm  startup.c
c-jit-x64/doc/: data-structures.md  x64-linux-ABI-calling-convention.txt
c-jit-x64/runtime/: CMakeLists.txt  rt-funcs.c  rt-funcs.h  rt-heap.c  rt-heap.h  rt-io.c  rt-io.h  rt-stdlib.asm  rt-stdlib.h  rt-string.asm  rt-string.h  rt-syscall.asm  rt-syscall.h
c-jit-x64/runtime-tests/: CMakeLists.txt  rt-test-module-all.c  rt-test-module-all.h  rt-test-module-funcs.c  rt-test-module-heap.c  rt-test-module-mem-ops.c
c-jit-x64/stdlib/: heap.c  heap.h  io.c  io.h  stdlib.asm  stdlib.h  syscall.asm  syscall.h
c-jit-x64/test/: heap-tests.c  heap-tests.h  test-assertions.h  test-main.c  test-model.c  test-model.h  test-module-heap.c  test-module-heap.h  test-module-self.c  test-module-self.h  test-runner.c  test-runner.h  test-suite.c  test-utils.c  test-utils.h
c-jit-x64/test-lib/: CMakeLists.txt  lambda_test.c  test-assertions.c  test-assertions.h  test-model.c  test-model.h  test-module-self.c  test-runner.c  test-runner.h  test-utils.h
c-jit-x64/test-runner/: CMakeLists.txt  test-main.c
java-bytecode/: .gitignore  build.gradle  pom.xml
java-bytecode/gradle/wrapper/: gradle-wrapper.properties
java-bytecode/src/main/java/com/github/pstephens/: Program.java
java-bytecode/src/main/java/com/github/pstephens/mal/: Program.java
java-bytecode/src/main/java/com/github/pstephens/mal/collection/: List.java
java-bytecode/src/main/java/com/github/pstephens/readline/: EventStream.java  KeyEvent.java  TTY.java
java-bytecode/src/main/java/com/github/pstephens/readline/windows/: Kernel32.java
java-bytecode/src/test/java/com/github/pstephens/mal/collection/: ListTests.java
mal-x64/: Makefile  funcs.mal  heap.mal  nasm.mal  step0_repl.mal  syscall.mal  x64.mal
mal-x64/doc/: data-structures.md
